--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,11 @@ spring:
     datasource:
         url: ${DB_URL}
         username: ${DB_USERNAME}
-        password: ${DB_PWD}
+        password: ${DB_PASSWORD}
         driver-class-name: com.mysql.cj.jdbc.Driver
+
     jpa:
+        database-platform: org.hibernate.dialect.MySQL8Dialect
         hibernate:
             ddl-auto: update
         show-sql: true
