--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,21 @@ spring:
         hibernate:
             ddl-auto: update
         show-sql: true
+
+    servlet:
+        multipart:
+            enabled: true
+            max-file-size: 10MB       # 단일 파일 최대 크기
+            max-request-size: 20MB    # 전체 요청의 최대 크기
+
+cloud:
+    aws:
+        credentials:
+            accessKey: ${S3_ACCESS_KEY}
+            secretKey: ${S3_SECRET_ACCESS_KEY}
+        s3:
+            bucket: ${S3_BUCKET_NAME}
+        region:
+            static: ${S3_REGION}
+        stack:
+            auto: false
