Refactor: PublicCompanyDto 필드명 영문화 및 더미 유저 생성 방식 개선

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,4 @@ spring:
         show-sql: true
 
 public-api:
-    key: ${API_SERVICE_KEY_ENCOD}
-public-api-d:
-    key: ${API_SERVICE_KEY_DECOD}
+    key: ${API_SERVICE_KEY}
