feat: User 회원가입 기능 구현 #2 - 예외처리 제외 구현완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,5 +13,8 @@ spring:
             ddl-auto: update
         show-sql: true
 
+    jwt:
+        secret: ${JWT_SECRET}
+
 public-api:
     key: ${API_SERVICE_KEY}
