--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,10 @@ spring:
             enabled: true
             max-file-size: 500MB      # 단일 파일 최대 크기
             max-request-size: 500MB   # 전체 요청의 최대 크기
+    data:
+        redis:
+            host: ${REDIS_HOST}
+            port: ${REDIS_PORT}
 cloud:
     aws:
         credentials:
