feat: login 엔드 포인트 swagger 등록 #2

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,7 @@ spring:
         redis:
             host: ${REDIS_HOST}
             port: ${REDIS_PORT}
+
 cloud:
     aws:
         credentials:
@@ -37,6 +38,8 @@ cloud:
         stack:
             auto: false
 
-
 public-api:
     key: ${API_SERVICE_KEY}
+
+springdoc:
+    show-login-endpoint: true
