--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,3 +43,8 @@ public-api:
 
 springdoc:
     show-login-endpoint: true
+
+coolsms:
+    apikey: ${SMS_API_KEY}
+    apisecret: ${SMS_SECRET_KEY}
+    fromnumber: ${SMS_FROM_NUMBER}
