--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,18 @@ spring:
             port: ${REDIS_PORT}
         mongodb:
             uri: ${MONGODB_URL}
-
+    mail:
+        host: smtp.gmail.com
+        port: 587
+        username: ${GMAIL_USERNAME}
+        password: ${GMAIL_PASSWORD}
+        properties:
+            mail:
+                smtp:
+                    auth: true
+                    timeout: 5000
+                    starttls:
+                        enable: true
 cloud:
     aws:
         credentials:
