feat: GPT 기능 구현 완료 #33 - 작품 추가 화면에서 작품내용 기반 GPT 태그 자동 생성 - 작품 등록 시 작품내용 기반 GPT 산업 분야 등록

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,3 +61,7 @@ coolsms:
     apikey: ${SMS_API_KEY}
     apisecret: ${SMS_SECRET_KEY}
     fromnumber: ${SMS_FROM_NUMBER}
+
+gpt:
+    api:
+        key: ${GPT_API_KEY}
